--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.72.4",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
-    "react-native-maps": "1.7.1"
+    "react-native-maps": "1.7.1",
+    "expo-sqlite": "~11.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
