--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
+    "expo-app-loading": "^2.1.1",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-sqlite": "~11.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
-    "react-native-maps": "1.7.1",
-    "expo-sqlite": "~11.3.2"
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
